; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_mqtt_connack.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_mqtt_connack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32 }

@MG_MQTT_CMD_CONNACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_mqtt_connack(%struct.mg_connection* %0, i32 %1) #0 {
  %3 = alloca %struct.mg_connection*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.mg_connection* %0, %struct.mg_connection** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.mg_connection*, %struct.mg_connection** %3, align 8
  %7 = load i32, i32* @MG_MQTT_CMD_CONNACK, align 4
  %8 = call i32 @mg_send_mqtt_header(%struct.mg_connection* %6, i32 %7, i32 0, i32 2)
  %9 = load %struct.mg_connection*, %struct.mg_connection** %3, align 8
  %10 = call i32 @mg_send(%struct.mg_connection* %9, i32* %5, i32 1)
  %11 = load %struct.mg_connection*, %struct.mg_connection** %3, align 8
  %12 = call i32 @mg_send(%struct.mg_connection* %11, i32* %4, i32 1)
  ret void
}

declare dso_local i32 @mg_send_mqtt_header(%struct.mg_connection*, i32, i32, i32) #1

declare dso_local i32 @mg_send(%struct.mg_connection*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
